--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body style="margin-top: -20px;">
+  <body>
     <app>Loading...</app>
   </body>
 </html>
