--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
   <body>
-    <app>Loading...</app>
+    <demo>Loading...</demo>
   </body>
 </html>
