--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -5,8 +5,29 @@
     <title>hci-ng-grid</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <style>
+      @-moz-keyframes spin {
+        to { -moz-transform: rotate(360deg); }
+      }
+      @-webkit-keyframes spin {
+        to { -webkit-transform: rotate(360deg); }
+      }
+      @keyframes spin {
+        to {transform:rotate(360deg);}
+      }
+
+      .spinner {
+        -webkit-animation: spin 2s infinite linear;
+      }
+    </style>
   </head>
   <body>
-    <demo>Loading...</demo>
+    <demo>
+      <div style="display: flex; width: 100vw; height: 100vh;">
+        <div style="display: flex; margin-left: auto; margin-right: auto; margin-top: auto; margin-bottom: auto; width: 25%; height: 25%;">
+          <img src="assets/core.svg" class="spinner" />
+        </div>
+      </div>
+    </demo>
   </body>
 </html>
